# traccar-chatkit

./: .gitignore  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: chat.py  constants.py  main.py  memory_store.py  neon_store.py  openapi.yaml  sqlite_store.py  traccar.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/functions/: chatkit.js
frontend/src/: App.tsx
frontend/src/components/: ChatKitPanel.tsx  Home.tsx  HtmlRenderer.tsx  Map.tsx
frontend/src/hooks/: useColorScheme.ts
frontend/src/lib/: config.ts
